--- a/table-grid.html
+++ b/table-grid.html
@@ -182,17 +182,17 @@
                                 <div class="form-row clearfix">
 									<div class="field-name"><label class="label">Vessel Name</label></div>
 									<div class="no-padding margin-5 col-md-3 col-sm-3 col-xs-3"><input type="text" class="text-box" name="service_code" value=""></div>
-									<div class=" margin-5  pull-left set-empty col-md-3 col-sm-3 col-xs-3"><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty1"><label for="set-empty1" class="css-label">Set Empty</label></span></div>
+									<div class="pull-left set-empty col-md-3 col-sm-3 col-xs-3 no-padding "><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty1"><label for="set-empty1" class="css-label">Set Empty</label></span></div>
                                 </div>
 								<div class="form-row clearfix">
 									<div class="field-name"><label class="label">Type </label></div>
 									<div class="no-padding margin-5 col-md-3 col-sm-3 col-xs-3"><input type="text" class="text-box" name="service_code" value=""></div>
-									<div class=" margin-5  pull-left set-empty col-md-3 col-sm-3 col-xs-3"><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty2"><label for="set-empty2" class="css-label">Set Empty</label></span></div>
+									<div class="pull-left set-empty col-md-3 col-sm-3 col-xs-3 no-padding "><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty2"><label for="set-empty2" class="css-label">Set Empty</label></span></div>
                                 </div>
 								<div class="form-row clearfix">
 									<div class="field-name"><label class="label">Length </label></div>
 									<div class="no-padding margin-5 col-md-3 col-sm-3 col-xs-3"><input type="text" class="text-box" name="service_code" value=""></div>
-									<div class=" margin-5  pull-left set-empty col-md-3 col-sm-3 col-xs-3"><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty3"><label for="set-empty3" class="css-label">Set Empty</label></span></div>
+									<div class="pull-left set-empty col-md-3 col-sm-3 col-xs-3 no-padding "><span class="checkbox"><input type="checkbox" class="css-checkbox" id="set-empty3"><label for="set-empty3" class="css-label">Set Empty</label></span></div>
                                 </div>
 								
                                 <!-- Form Footer -->
