--- a/form-element.html
+++ b/form-element.html
@@ -45,6 +45,7 @@
       <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/lib/jQueryUI/jquery-ui.js"></script>
       <!-- Custom JavaScript -->
+	  <script src="template/elements.js"></script>
 	  <script src="js/general.js"></script>
       <script src="js/lib/form/dform.js"></script>
       <script src="js/functions.js"></script>
