--- a/elements-new.html
+++ b/elements-new.html
@@ -531,9 +531,8 @@
 											<li value="5" rel="9"><i class="fa fa-pencil-square-o"></i>Category5</li>
 										</ul>
 										<input type="hidden" name="search_category" class="dropdown-item" value="12" />
-									
-									<span class="error-msg left-bottom">Please enter </span>
 								</div>
+								<span class="error-msg right-top">Please enter </span>
 								</div>
 								<div class="col-md-6 no-padding p-r-5">
 									<input type="text" class="text-box validate-details">
@@ -729,7 +728,7 @@
 							</div>
                         </div>
                     <div class="col-md-12 clearfix">
-                        <button class="uie-btn uie-btn-primary validate-form-page" type="button">Submit</button>
+                        <button class="uie-btn uie-btn-primary validate-form-page validate-login" type="button">Submit</button>
                         <button class="uie-btn uie-btn-primary" type="reset">Reset</button>
                     </div>
                 </form>
@@ -745,9 +744,9 @@
 			
 				<div class="switch">
       <input type="radio" class="switch-input" name="view" value="week" id="week" checked>
-      <label for="week" class="switch-label switch-label-off">Week</label>
+      <label for="week" class="switch-label switch-label-off">ON</label>
       <input type="radio" class="switch-input" name="view" value="month" id="month">
-      <label for="month" class="switch-label switch-label-on">Month</label>
+      <label for="month" class="switch-label switch-label-on">OFF</label>
       <span class="switch-selection"></span>
     </div>
 			</div>
