Function add for sidebar

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -76,7 +76,7 @@
 
             <div class="block-container">
                 <nav class="navbar navbar-default">
-                 <div>
+                    <div>
                         <div class="logo-fix-width">
                             <a href="index.html"><img src="img/logo.png">
                             </a>
@@ -86,7 +86,7 @@
                             </a>
                         </div>
                     </div>
-                 <div id="navbar">
+                    <div id="navbar">
                         <nav class="navbar navbar-default navbar-static-top" role="navigation">
                             <div class="navbar-header">
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
@@ -119,37 +119,37 @@
                                                 <li class="dropdown dropdown-submenu">
                                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Link 4</a>
                                                     <ul class="dropdown-menu">
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Link 4</a>
+                                                        <li><a href="#"> Dropdown Link 4</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 4.1</a>
+                                                        <li><a href="#"> Dropdown Submenu Link 4.1</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 4.2</a>
+                                                        <li><a href="#"> Dropdown Submenu Link 4.2</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 4.3</a>
+                                                        <li><a href="#">Dropdown Submenu Link 4.3</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 4.4</a>
+                                                        <li><a href="#"> Dropdown Submenu Link 4.4</a>
                                                         </li>
                                                     </ul>
                                                 </li>
                                                 <li class="dropdown dropdown-submenu">
                                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Link 5</a>
                                                     <ul class="dropdown-menu">
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Link 5</a>
+                                                        <li><a href="#"> Dropdown Link 5</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.1</a>
+                                                        <li><a href="#"> Dropdown Submenu Link 5.1</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.2</a>
+                                                        <li><a href="#">Dropdown Submenu Link 5.2</a>
                                                         </li>
-                                                        <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.3</a>
+                                                        <li><a href="#">Dropdown Submenu Link 5.3</a>
                                                         </li>
                                                         <li class="dropdown dropdown-submenu">
-                                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.4</a>
+                                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Dropdown Submenu Link 5.4</a>
                                                             <ul class="dropdown-menu">
-                                                                <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.4</a>
+                                                                <li><a href="#"> Dropdown Submenu Link 5.4</a>
                                                                 </li>
-                                                                <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.4.1</a>
+                                                                <li><a href="#"> Dropdown Submenu Link 5.4.1</a>
                                                                 </li>
-                                                                <li><a href="#"><span class="submenu-icon"><i class="fa fa-file-text-o"></i> </span> Dropdown Submenu Link 5.4.2</a>
+                                                                <li><a href="#"> Dropdown Submenu Link 5.4.2</a>
                                                                 </li>
                                                             </ul>
                                                         </li>
@@ -157,36 +157,60 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">
-                          <i class="icon"><strong>?</strong></i> Help</a> </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="icon"><strong>?</strong></i> Help</a>
+                                        </li>
                                     </ul>
-									<div class="search">  <input type="text" placeholder="Search" class="text-box" name="service_code" value="">
-		  </div>
+                                    <div class="search">
+                                        <input type="text" placeholder="Search" class="text-box" name="service_code" value="">
+                                    </div>
                                 </div>
-								<div class="bradcrum-menu">
-                     <ul>
-						<li><a href="javascript:void(0);" data-tooltip="You are on home page" class="tab_action bread_home" id="home">Home</a></li>
-                        <li class="bred_pan">You are on home page</li>
-                      
-                     </ul>
-                  </div>
+                                <div class="bradcrum-menu">
+                                    <ul>
+                                        <li><a href="javascript:void(0);" data-tooltip="You are on home page" class="tab_action bread_home" id="home">Home</a>
+                                        </li>
+                                        <li class="bred_pan">You are on home page</li>
+
+                                    </ul>
+                                </div>
                             </div>
                             <!-- /.navbar-collapse -->
                         </nav>
                     </div>
- 				
-            <!--/.nav-collapse -->
 
-            <!--/.container-fluid -->
-            </nav>
+                    <!--/.nav-collapse -->
+
+                    <!--/.container-fluid -->
+                </nav>
 
 
             </div>
         </section>
-    </header>
-<div class="search mobile-search">  <input type="text" value="" name="service_code" class="text-box" placeholder="Search">
-		  </div>
-    <!-- End Header -->
+		 <div class="search mobile-search">
+        <input type="text" value="" name="service_code" class="text-box" placeholder="Search">
+    </div>
+	</header>
+	<!-- End Header -->
+	<section class="clearfix">
+	<!-- Sidebar -->
+	<aside class="left-panel">
+		
+		<ul id="nav_pan">
+	
+			<li class="operation-planning"><a  id="operation_planning" class="tab_action tooltip-right" href="javascript:void(0);" data-tooltip="Operation Dashboard">Operation & Planning</a></li>
+			<li class="billing"><a data-tooltip="Billing" id="billing" class="tooltip-right tab_action" href="javascript:void(0);">Billing</a></li>
+			<li class="edi"><a data-tooltip="EDI" id="edi" class="tooltip-right tab_action" href="javascript:void(0);">EDI</a></li>
+			<li class="gate"><a data-tooltip="Gate" id="gate" class="tooltip-right tab_action" href="javascript:void(0);">Gate</a></li>
+			<li class="containers"><a data-tooltip="Container" id="containers" class="tooltip-right tab_action" href="javascript:void(0);">Container</a></li>
+			<li class="services"><a data-tooltip="Services" id="services" class="tooltip-right tab_action" href="javascript:void(0);">Services</a></li>
+			<li class="reporting"><a data-tooltip="Reporting" id="reporting" class="tooltip-right tab_action" href="javascript:void(0);">Reporting</a></li>
+			<li class="operation-dashboard"><a data-tooltip="Operation Dashboard" id="operation-dashboard" class="tooltip-right tab_action" href="javascript:void(0);">Operation Dashboard</a></li>
+			<li class="administration"><a data-tooltip="Administration" id="administration" class="tooltip-right tab_action" href="javascript:void(0);">Administration</a></li>
+		</ul>
+		</aside>
+	</section>
+	<!-- End Sidebar -->
 
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
     <!-- Bootstrap Plugin Js -->
