--- a/dashboard1.html
+++ b/dashboard1.html
@@ -198,15 +198,15 @@
 		
 		<ul id="nav_pan">
 	
-			<li class="operation-planning"><a  id="operation_planning" class="tab_action tooltip-right" href="javascript:void(0);" data-tooltip="Operation Dashboard">Operation & Planning</a></li>
-			<li class="billing"><a data-tooltip="Billing" id="billing" class="tooltip-right tab_action" href="javascript:void(0);">Billing</a></li>
-			<li class="edi"><a data-tooltip="EDI" id="edi" class="tooltip-right tab_action" href="javascript:void(0);">EDI</a></li>
-			<li class="gate"><a data-tooltip="Gate" id="gate" class="tooltip-right tab_action" href="javascript:void(0);">Gate</a></li>
-			<li class="containers"><a data-tooltip="Container" id="containers" class="tooltip-right tab_action" href="javascript:void(0);">Container</a></li>
-			<li class="services"><a data-tooltip="Services" id="services" class="tooltip-right tab_action" href="javascript:void(0);">Services</a></li>
-			<li class="reporting"><a data-tooltip="Reporting" id="reporting" class="tooltip-right tab_action" href="javascript:void(0);">Reporting</a></li>
-			<li class="operation-dashboard"><a data-tooltip="Operation Dashboard" id="operation-dashboard" class="tooltip-right tab_action" href="javascript:void(0);">Operation Dashboard</a></li>
-			<li class="administration"><a data-tooltip="Administration" id="administration" class="tooltip-right tab_action" href="javascript:void(0);">Administration</a></li>
+			<li class="operation-planning"><a  id="operation_planning" class="tab_action tooltip-right" href="javascript:void(0);" data-tooltip="Operation Dashboard"><img src="img/icons/svg/ship.svg">	Operation & Planning</a></li>
+			<li class="billing"><a data-tooltip="Billing" id="billing" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Billing</a></li>
+			<li class="edi"><a data-tooltip="EDI" id="edi" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">EDI</a></li>
+			<li class="gate"><a data-tooltip="Gate" id="gate" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Gate</a></li>
+			<li class="containers"><a data-tooltip="Container" id="containers" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Container</a></li>
+			<li class="services"><a data-tooltip="Services" id="services" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Services</a></li>
+			<li class="reporting"><a data-tooltip="Reporting" id="reporting" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Reporting</a></li>
+			<li class="operation-dashboard"><a data-tooltip="Operation Dashboard" id="operation-dashboard" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Operation Dashboard</a></li>
+			<li class="administration"><a data-tooltip="Administration" id="administration" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Administration</a></li>
 		</ul>
 		</aside>
 	</section>
