--- a/table-grid.html
+++ b/table-grid.html
@@ -209,7 +209,7 @@
                     <!-- Panel pagination -->
                     <div class="pagination-block clearfix">
                         <div class="pages-info">
-                            <div class="page">
+                            <div class="page-options">
                                 <span>Page</span> <a href="#"><i class="fa fa-chevron-left"></i></a>
 
                                 <div class="dropdown-list">
@@ -227,7 +227,7 @@
                                 <a href="#"><i class="fa fa-chevron-right"></i></a>
                                 <span>of 260 </span>
                             </div>
-                            <div class="view">
+                            <div class="page-record-options">
                                 <span> View</span>
 
                                 <div class="dropdown-list">
@@ -244,7 +244,7 @@
 
                                 <span> records</span>
                             </div>
-                            <div class="records">
+                            <div class="page-total-records">
                                 Total 6049 records found.
                             </div>
                         </div>
@@ -870,7 +870,7 @@
                     <!-- Panel pagination -->
                     <div class="pagination-block clearfix">
                         <div class="pages-info">
-                            <div class="page">
+                            <div class="page-options">
                                 <span>Page</span> <a href="#"><i class="fa fa-chevron-left"></i></a>
                                 <div class="dropdown-list">
                                     <div class="selected-listitem">11</div>
@@ -887,7 +887,7 @@
                                 <a href="#"><i class="fa fa-chevron-right"></i></a>
                                 <span>of 260 </span>
                             </div>
-                            <div class="view">
+                            <div class="page-record-options">
                                 <span> View</span>
 
                                 <div class="dropdown-list">
@@ -904,7 +904,7 @@
 
                                 <span>  records</span>
                             </div>
-                            <div class="records">Total 6049 records found.
+                            <div class="page-total-records">Total 6049 records found.
                             </div>
                         </div>
 
