Svg add for dashboard and sidebar html and responsive

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -198,20 +198,23 @@
 		
 		<ul id="nav_pan">
 	
-			<li class="operation-planning"><a  id="operation_planning" class="tab_action tooltip-right" href="javascript:void(0);" data-tooltip="Operation Dashboard"><img src="img/icons/svg/ship.svg">	Operation & Planning</a></li>
-			<li class="billing"><a data-tooltip="Billing" id="billing" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Billing</a></li>
-			<li class="edi"><a data-tooltip="EDI" id="edi" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">EDI</a></li>
-			<li class="gate"><a data-tooltip="Gate" id="gate" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Gate</a></li>
-			<li class="containers"><a data-tooltip="Container" id="containers" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Container</a></li>
-			<li class="services"><a data-tooltip="Services" id="services" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Services</a></li>
-			<li class="reporting"><a data-tooltip="Reporting" id="reporting" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Reporting</a></li>
-			<li class="operation-dashboard"><a data-tooltip="Operation Dashboard" id="operation-dashboard" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Operation Dashboard</a></li>
-			<li class="administration"><a data-tooltip="Administration" id="administration" class="tooltip-right tab_action" href="javascript:void(0);"><img src="img/icons/svg/ship.svg">Administration</a></li>
+			<li class="operation-planning"><a data-tooltip="Operation Dashboard" href="javascript:void(0);" class="tab_action tooltip-right" id="operation_planning">Operation &amp; Planning</a></li>
+			<li class="billing"><a href="javascript:void(0);" class="tooltip-right tab_action" id="billing" data-tooltip="Billing">Billing</a></li>
+			<li class="edi"><a href="javascript:void(0);" class="tooltip-right tab_action" id="edi" data-tooltip="EDI">EDI</a></li>
+			<li class="gate"><a href="javascript:void(0);" class="tooltip-right tab_action" id="gate" data-tooltip="Gate">Gate</a></li>
+			<li class="containers"><a href="javascript:void(0);" class="tooltip-right tab_action" id="containers" data-tooltip="Container">Container</a></li>
+			<li class="services"><a href="javascript:void(0);" class="tooltip-right tab_action" id="services" data-tooltip="Services">Services</a></li>
+			<li class="reporting"><a href="javascript:void(0);" class="tooltip-right tab_action" id="reporting" data-tooltip="Reporting">Reporting</a></li>
+			<li class="operation-dashboard"><a href="javascript:void(0);" class="tooltip-right tab_action" id="operation-dashboard" data-tooltip="Operation Dashboard">Operation Dashboard</a></li>
+			<li class="administration"><a href="javascript:void(0);" class="tooltip-right tab_action" id="administration" data-tooltip="Administration">Administration</a></li>
 		</ul>
 		</aside>
 	</section>
 	<!-- End Sidebar -->
-
+	<!-- Footer -->
+	<footer>
+			2015 Copyright &copy; DP World. All rights reserved.
+		</footer>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
     <!-- Bootstrap Plugin Js -->
     <script src="js/lib/bootstrap/bootstrap.min.js"></script>
@@ -224,6 +227,8 @@
     <script src="js/initialize.js"></script>
     <script src="js/init/table-grid.js"></script>
     <script src="js/init/dashboard.js"></script>
+	
+	<script src="js/lib/owl-carousel/owl.carousel.min.js"></script>
 </body>
 
 </html>
