commit changes by Jhalak on 06-01-2015

--- a/form-element.html
+++ b/form-element.html
@@ -25,15 +25,15 @@
 		
 	</head>
    <body>
-      <div class="container button-centre">
-		<div class="col-md-12">
+      <div class="container">
+		<!--<div class="col-md-12">
             <div class="col-md-4">
 				<div class="call-formbtn"></div>
             </div>
 		</div>
-		<div class="padding-top"></div>
+		<div class="padding-top"></div>-->
         <section class="ac_item">
-            <div class="form-content col-md-12">
+            <div class="col-md-12" id="form-content">
                 <h2 class="panel-title"></h2>
             </div>
         </section>
