--- a/dashboard1.html
+++ b/dashboard1.html
@@ -211,8 +211,8 @@
 		</aside>
 	</section>
 	<!-- End Sidebar -->
-	<!-- Footer -->
-	<footer>
+	
+	<footer class="footer">
 			2015 Copyright &copy; DP World. All rights reserved.
 		</footer>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
