--- a/elements-new.html
+++ b/elements-new.html
@@ -396,17 +396,17 @@
                     </br>
                 </p>
                 <div class="group-button">
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><a href="#"><i class="fa fa-ship"></i></a>
+                    <button class="uie-btn-icon tooltip-bottom" data-tooltip="data-tooltip"><a href="#"><i class="fa fa-ship"></i></a>
                     </button>
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><i class="fa fa-cogs"></i>
+                    <button class="uie-btn-icon features tooltip-bottom" data-tooltip="data-tooltip"><i class="fa fa-cogs"></i>
                     </button>
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><i class="fa fa-wrench"></i>
+                    <button class="uie-btn-icon features tooltip-bottom" data-tooltip="data-tooltip"><i class="fa fa-wrench"></i>
                     </button>
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><i class="fa fa-train"></i>
+                    <button class="uie-btn-icon features tooltip-bottom" data-tooltip="data-tooltip"><i class="fa fa-train"></i>
                     </button>
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><i class="fa fa-file-text"></i>
+                    <button class="uie-btn-icon features tooltip-bottom" data-tooltip="data-tooltip"><i class="fa fa-file-text"></i>
                     </button>
-                    <button class="uie-btn-icon features simptip-position-bottom" data-tooltip="data-tooltip"><i class="fa fa-calendar"></i>
+                    <button class="uie-btn-icon features tooltip-bottom" data-tooltip="data-tooltip"><i class="fa fa-calendar"></i>
                     </button>
                 </div>
                 <div class="clearfix"></div>
@@ -738,9 +738,7 @@
                         </div>
                         <div class="col-md-6 form-col-2 p-r-5">
                             <div class="field prepend-icon file">
-                               <label class="field-icon">
-									<i class="fa fa-cloud-upload"></i>
-								</label><input type="text" placeholder="Select File" id="uploader2" class="gui-input">
+                               <input type="text" placeholder="Select File" id="uploader2" class="gui-input">
 								 <span class="uie-btn uie-btn-primary btn-sm right">Choose File</span>
 								 <input type="file" onchange="document.getElementById('uploader2').value = this.value;" id="file2" name="file2" class="gui-file">
                             </div>
