--- a/elements-new.html
+++ b/elements-new.html
@@ -689,9 +689,10 @@
                             <label class="label">Berthing Type : </label>
                         </div>
                         <div class="form-col-2 p-r-5">
-                            <input type="text" class="text-box" />
+                            <input type="text" class="text-box  validate-details" />
+							<span class="error-msg right-top">Please enter </span>
                         </div>
-
+						
                     </div>
                     <div class="form-row col-md-6 clearfix">
                         <div class="form-col-1">
@@ -723,7 +724,7 @@
                         </div>
                         <div class="form-col-2">
                             <div class="col-md-6 p-r-5">
-                                <div class="dropdown-list">
+                                <div class="dropdown-list validate-details">
                                     <div class="selected-listitem">Click Me</div>
                                     <ul>
                                         <li value=""> Select Category</li>
@@ -735,10 +736,11 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-
+								<span class="error-msg right-top">Please enter </span>
                             </div>
                             <div class="col-md-6 p-r-5">
-                                <input type="text" class="text-box">
+                                <input type="text" class="text-box validate-details">
+								<span class="error-msg right-top">Please enter </span>
                             </div>
                         </div>
                     </div>
@@ -747,7 +749,8 @@
                             <label class="label">Vessel Service Code : </label>
                         </div>
                         <div class="form-col-2 p-r-5">
-                            <input type="text" class="text-box">
+                            <input type="text" class="text-box validate-details">
+							<span class="error-msg right-top">Please enter </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -755,7 +758,7 @@
                             <label class="label">Service Type : </label>
                         </div>
                         <div class="form-col-2 p-r-5">
-                            <div class="dropdown-list">
+                            <div class="dropdown-list validate-details">
                                 <div class="selected-listitem">Click Me</div>
                                 <ul>
                                     <li value=""> Select Category</li>
@@ -767,6 +770,7 @@
                                 </ul>
                                 <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                             </div>
+							<span class="error-msg right-top">Please enter </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -774,7 +778,8 @@
                             <label class="label">Transmit Days : </label>
                         </div>
                         <div class="col-md-6 form-col-2 p-r-5">
-                            <input type="text" class="text-box">
+                            <input type="text" class="text-box validate-details">
+							<span class="error-msg right-top">Please enter </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
