--- a/elements-new.html
+++ b/elements-new.html
@@ -631,11 +631,11 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-                                <span class="error-msg right-top">Please enter </span>
+                                <span class="error-msg right-top">A message may be formatted to display </span>
                             </div>
                             <div class="col-md-6 no-padding p-r-5">
                                 <input type="text" class="text-box validate-details">
-                                <span class="error-msg left-bottom">Please enter text</span>
+                                <span class="error-msg left-bottom">A message may be formatted to display </span>
                             </div>
 
                         </div>
@@ -658,7 +658,7 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-                                <span class="error-msg right-top">Please enter </span>
+                                <span class="error-msg right-top">A message may be formatted to display  </span>
                             </div>
                         </div>
                     </div>
@@ -680,7 +680,7 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-                                <span class="error-msg right-top">Please enter </span>
+                                <span class="error-msg right-top">A message may be formatted to display </span>
                             </div>
                         </div>
                     </div>
@@ -690,7 +690,7 @@
                         </div>
                         <div class="form-col-2 p-r-5">
                             <input type="text" class="text-box  validate-details" />
-							<span class="error-msg right-top">Please enter </span>
+							<span class="error-msg right-top">A message may be formatted to display </span>
                         </div>
 						
                     </div>
@@ -740,7 +740,7 @@
                             </div>
                             <div class="col-md-6 p-r-5">
                                 <input type="text" class="text-box validate-details">
-								<span class="error-msg right-top">Please enter </span>
+								<span class="error-msg left-bottom">A message may be formatted to display </span>
                             </div>
                         </div>
                     </div>
@@ -750,7 +750,7 @@
                         </div>
                         <div class="form-col-2 p-r-5">
                             <input type="text" class="text-box validate-details">
-							<span class="error-msg right-top">Please enter </span>
+							<span class="error-msg right-top">A message may be formatted to display </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -770,7 +770,7 @@
                                 </ul>
                                 <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                             </div>
-							<span class="error-msg right-top">Please enter </span>
+							<span class="error-msg right-top">A message may be formatted to display </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -779,7 +779,7 @@
                         </div>
                         <div class="col-md-6 form-col-2 p-r-5">
                             <input type="text" class="text-box validate-details">
-							<span class="error-msg right-top">Please enter </span>
+							<span class="error-msg right-top">A message may be formatted to display </span>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -801,10 +801,13 @@
                         <div class="form-col-1">
                             <label class="label"><b>Proforma ETA :</b> </label>
                         </div>
-                        <div class="col-md-6 form-col-2 p-r-5">
-                            <div class="col-md-6 p-r-5">
-                                <div class="dropdown-list">
+                         <div class="form-col-2">
+
+                            <div class="col-md-6 no-padding p-r-5">
+                                <div class="dropdown-list validate-details">
+
                                     <div class="selected-listitem">Click Me</div>
+
                                     <ul>
                                         <li value=""> Select Category</li>
                                         <li value="1" rel="5"> Category1</li>
@@ -815,11 +818,13 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
+                                <span class="error-msg right-top">A message may be formatted to display </span>
+                            </div>
+                            <div class="col-md-6 no-padding p-r-5">
+                                <input type="text" class="text-box validate-details">
+                                <span class="error-msg left-bottom">A message may be formatted to display </span>
+                            </div>
 
-                            </div>
-                            <div class="col-md-6 no-padding">
-                                <input type="text" class="text-box">
-                            </div>
                         </div>
                     </div>
                     <div class="form-row col-md-6 clearfix">
@@ -915,8 +920,8 @@
     <script src="js/functions.js"></script>
     <script src="js/initialize.js"></script>
     <script src="js/init/elements.js"></script>
-    <script src="js/bootstrap-datetimepicker.min.js"></script>
-    <script src="js/bootstrap-datetimepicker.pt-BR.js"></script>
+    <script src="js/lib/bootstrap/bootstrap-datetimepicker.min.js"></script>
+    <script src="js/lib/bootstrap/bootstrap-datetimepicker.pt-BR.js"></script>
 
 </body>
 
