Commit code by Jhalak for changes on date 8-1-2016

--- a/form-element.html
+++ b/form-element.html
@@ -40,6 +40,7 @@
       </div>
       <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
       <script src="js/lib/blockUI/jquery.blockUI.js"></script>
+      <script src="js/lib/multifile/jQuery.MultiFile.min.js"></script>
       <script src="js/lib/language/jquery.i18n.properties.js"></script>
       <!-- custom scrollbar plugin -->
       <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
