--- a/elements-new.html
+++ b/elements-new.html
@@ -667,7 +667,7 @@
                             <label class="label">Berthing Type : </label>
                         </div>
                         <div class="form-col-2">
-                            <div class="p-r-5">
+                            <div class="p-r-5 error-msg-text">
                                 <div class="dropdown-list validate-details">
                                     <div class="selected-listitem">Click Me</div>
                                     <ul>
