Dashboard block html

--- a/dashboard.html
+++ b/dashboard.html
@@ -223,7 +223,7 @@
                     <!--End  Mobile Action Area -->
                 </div>
                 <div class="panel-block-content no-padding">
-                <div class="element-sec">
+                <div class="element-sec clearfix ">
 					<div class="col-md-3">
 					   <div class="element-block bayplan">
 						  <span class="icon">&nbsp; </span>
