--- a/table-grid.html
+++ b/table-grid.html
@@ -893,7 +893,7 @@
                         </table>
                     </div>
                     <!-- Panel pagination -->
-                    <div class="pagination-block clearfix">
+                   <div class="pagination-block clearfix bottom-pagination">
                         <div class="pages-info">
                             <div class="page-options">
                                 <span>Page</span> <a href="#"><i class="fa fa-chevron-left"></i></a>
